add and apply editorconfig